--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,10 +13,10 @@
     <div class="col-xs">
       <small>
       {{ if .Site.Params.copyright }}
-        {{ i18n "copyright" }} &copy; {{ now.Format "2006" }} {{ .Site.Title }}
+        {{ i18n "copyright" }} &copy; {{ now.Format "2006" }} {{ .Site.Title }} · a project by <a href="https://dynastyprocess.com" target="_blank" rel="noopener">DynastyProcess.com</a>
       {{ end }}
       <div class="col-xs">
-          <small>A project by <a href="https://dynastyprocess.com" target="_blank" rel="noopener">DynastyProcess.com</a></small>
+          <small>Theme: <a href="https://github.com/kdevo/osprey-delight" target="_blank" rel="noopener">Osprey Delight</a></small>
       </div>
       </small>
     </div>
