--- a/layouts/partials/sections/install.html
+++ b/layouts/partials/sections/install.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12 middle-xs" style = "">
+    <div class="col-xs-12 middle-xs">
       {{ .Content }}
     </div>
   </div>
