--- a/assets/sass/_fontface.scss
+++ b/assets/sass/_fontface.scss
@@ -3,5 +3,5 @@
 $font-header: "Bai Jamjuree", "Bitter", "Ubuntu", Georgia, serif;
 $font-body: "IBM Plex Sans", "Rubic", "Poppins", "Helvetica", Arial, sans-serif;
 $font-code: "IBM Plex Mono", "Menlo", "Monaco", "Andale Mono", "lucida console", "Courier New", monospace;
-$font-tagline: $font-body;
+$font-tagline: $font-header;
 $nav-font: $font-header;
